# openshiftVM

./: README.md  fedpv.yaml  fedpvc.yaml  nginx-proxy.yaml  tricks  tricks.md  vm-config.yaml
lama/: app.py  gunicorn.conf.py  llama_inference.py  main.py  pyproject.toml
lama/static/: style.css
lama/static/js/: chat.js
lama/static/templates/: index.html
openshiftyamlfiles/: blockstorage.yaml  fedora-vm.yaml  nginx-proxy.yaml  vino-lama.yaml
