[project]
name = "repl-nix-chatwithllama"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "openvino>=2024.4.0",
    "transformers>=4.46.2",
    "numpy>=2.0.2",
    "torch>=2.5.1",
    "openvino-genai>=2024.4.0.0",
]

